Zoom and grid bugfix on small screen
On mobile, the layout is different--the image is already zoomed out to the maximum. So, minZoom should be 1 if on a mobile screen.

Also fixed a bug with the grid where it was growing infinitely in height on small screens. During a resize, 2px is added to the grid height and width (as the grid is shifted 2px to hide the left and top borders). However, in mobile mode, the mapCtr height is set to auto, so it will grow to fit all elements in the container, including the grid. As the resizeObserver is set to trigger on size changes to mapCtr, the grid increasing by 2px causes mapCtr to increase in height, which causes fitImg to trigger, increasing the grid height, increasing mapCtr height, triggering fitImg again, and so on. Now there is a check for mobile screens that just keeps the width and height fixed at 100% to prevent this bug.

--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,18 @@ on this line */
   /* hide the topmost and leftmost gridline */
   margin-top: -2px;
   margin-left: -2px;
-  height: calc(100% + 2px);
   width: calc(100% + 2px);
+  height: calc(100% + 2px); /* on mobile, parent height is set to auto */
 
   /* setup gridlines */
   background-image:
     linear-gradient(to right, black 1px, transparent 1px),
     linear-gradient(to bottom, black 1px, transparent 1px);
   background-size: 10% 10%; /* change this to change number of boxes */
+}
+
+@media screen and (min-width: 640px) {
+  .gridlines {
+    height: calc(100% + 2px);
+  }
 }
